--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="demo.simple.bitmapcanary">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -12,6 +14,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BitmapCanary"
         android:usesCleartextTraffic="true">
+
+        <!--    监控阈值，kb    -->
+        <meta-data
+            android:name="bitmap_canary_threshold_value"
+            android:value="3000" />
+        <!--    是否允许输出Log    -->
+        <meta-data
+            android:name="bitmap_canary_enable_log"
+            android:value="true" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
