--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,6 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     //
-//    debugImplementation project(path: ':bitmap_canary')
-    debugImplementation 'com.github.simplepeng:BitmapCanary:v1.0.0'
+    debugImplementation project(path: ':bitmap_canary')
+//    debugImplementation 'com.github.simplepeng:BitmapCanary:v1.0.0'
 }
