--- a/bitmap_canary/build.gradle
+++ b/bitmap_canary/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     //
     implementation 'me.weishu:epic:0.11.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
 }
