no-op 测试没问题

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,9 +16,20 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        release {
+            storeFile file("spiderman.jks")
+            storePassword "123456"
+            keyAlias "spiderman"
+            keyPassword "123456"
+            v2SigningEnabled true
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
