--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,9 +55,9 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     //
-//    debugImplementation project(path: ':bitmap_canary')
-//    releaseImplementation project(path: ':bitmap_canary_no_op')
+    debugImplementation project(path: ':bitmap_canary')
+    releaseImplementation project(path: ':bitmap_canary_no_op')
 
-    debugImplementation 'com.github.simplepeng.BitmapCanary:bitmap_canary:v1.0.2'
-    releaseImplementation 'com.github.simplepeng.BitmapCanary:bitmap_canary_no_op:v1.0.2'
+//    debugImplementation 'com.github.simplepeng.BitmapCanary:bitmap_canary:v1.0.2'
+//    releaseImplementation 'com.github.simplepeng.BitmapCanary:bitmap_canary_no_op:v1.0.2'
 }
