--- a/bitmap_canary_scanner/build.gradle
+++ b/bitmap_canary_scanner/build.gradle
@@ -1,13 +1,8 @@
 plugins {
-    id 'java-library'
-    id 'kotlin'
+    id 'java'
 }
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_7
     targetCompatibility = JavaVersion.VERSION_1_7
-}
-
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
