--- a/bitmap_canary_scanner/build.gradle
+++ b/bitmap_canary_scanner/build.gradle
@@ -6,3 +6,38 @@ java {
     sourceCompatibility = JavaVersion.VERSION_1_7
     targetCompatibility = JavaVersion.VERSION_1_7
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'me.simple.bitmapcanary.Scanner'
+        attributes 'Manifest-Version': "1.0.3"
+    }
+//    from {
+//        exclude 'META-INF/MANIFEST.MF'
+//        exclude 'META-INF/*.SF'
+//        exclude 'META-INF/*.DSA'
+//        exclude 'META-INF/*.RSA'
+//        configurations.implementation.resolve().collect {
+//            it.isDirectory() ? it : zipTree(it)
+//        }
+//    }
+    from {
+        exclude 'META-INF/MANIFEST.MF'
+        exclude 'META-INF/*.SF'
+        exclude 'META-INF/*.DSA'
+        exclude 'META-INF/*.RSA'
+        configurations.runtime.resolve().collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+}
+
+task makeJar(type: Copy, dependsOn: [build, jar]) {
+    group = "bitmap_canary"
+    from('build/libs') {
+        include '*.jar'
+        exclude '*-javadoc.jar'
+        exclude '*-sources.jar'
+    }
+    into(project.file("libs"))
+}
