--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ allprojects {
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
         maven { url 'https://jitpack.io' }
+//        maven {
+//            url  "https://dl.bintray.com/canyie/pine"
+//        }
     }
 }
 
