add duplicated image scanner

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ include ':app'
 include ':bitmap_canary'
 include ':bitmap_canary_no_op'
 include ':bitmap_canary_scanner'
+include ':duplicated_image_scanner'
